# xtrusign-pro

./: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  ENGINE_CONCEPTS.md  LICENSE  LICENSE.md  NOTICE  README.md
application/: CMakeLists.txt
application/src/: DocumentManager.cpp
apps/desktop/: CMakeLists.txt  readme.txt
apps/desktop/src/: MainWindow.cpp  MainWindow.h  OcctViewer.cpp  OcctViewer.h  main.cpp
apps/web/: CMakeLists.txt
dev/: readme.txt
docs/: ARCHITECTURE.md  FEATURE_NAME.md
engine/: CMakeLists.txt
engine/src/: Engine.cpp  GeometryEngine.cpp  GeometryEngine.h
test/: CMakeLists.txt
tests/: test_geometry.cpp
